--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div class="contact-info">
             <div class="info">
                 <h3>Address</h3>
-                <p>123 Nature Lane, Greenville, GV 12345</p>
+                <p>Bangalore, Karnataka, India</p>
             </div>
             <div class="info">
                 <h3>Phone</h3>
